[package]
name = "rs-goog-api-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.13"
hyper = "^0.14"
hyper-rustls = "^0.23"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
yup-oauth2 = { version = "^6", features = ["hyper-rustls"] }
url = "^2"
